Using commander for command line argument processing and help. Adds scripts for each command.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "artillery-core": "^2.0.0-0",
     "aws-sdk": "^2.5.0",
+    "commander": "^2.9.0",
     "ntp-client": "^0.5.3"
   },
   "devDependencies": {
