New lib/serverless.yml service definition file provides loadAndMonitor lambda definition. Using Commander in single slsart file, removing slsart-*.js, move implementation to lib/. README updated to install serverless and slsart globally and provide run example with -s option. Provide easy access to Serverless global install via lib/serverless-global.js. Add lib/package.json in lib to define Labmda Node JS dependencies. Updated package.json to install lib/package.json dependencies as post-install step. Added .jshintignore and updated .jscsrc to prevent linting of node_modules.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "jscs": "jscs .",
     "jshint": "jshint --exclude node_modules .",
-    "test": "mocha -r aws-sdk -r artillery-core --recursive -R min tests"
+    "test": "mocha -r aws-sdk -r artillery-core --recursive -R min tests",
+    "postinstall": "pushd lib && npm install && popd"
   },
   "repository": {
     "type": "git",
