* Move lambda-specific files to lib/lambda directory, update paths .jshintignore and handler.spec.js. * Updated URLs and example use in README. * Help now shows all available actions which may be used. * Added 'copy' action to copy contents of lib/lambda to working directory. * Checks for event.json in local folder or as command option to allow custome test scripts. * Will use local ./serverless.yml file, if found and allows the name of the test lambda to be specified using -n option.

--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "A serverless performance testing tool. `serverless` + `artillery` = crush.  a.k.a. Orbital Laziers",
   "main": "index.js",
   "bin": {
-    "slsart": "./bin/slsart"
+    "serverless-artillery": "./bin/serverless-artillery",
+    "slsart": "./bin/serverless-artillery"
   },
   "scripts": {
     "jscs": "jscs .",
-    "jshint": "jshint --exclude node_modules .",
+    "jshint": "jshint .",
     "test": "mocha -r aws-sdk -r artillery-core --recursive -R min tests",
-    "postinstall": "cd lib && npm install && cd .."
+    "postinstall": "cd lib/lambda && npm install && cd ../.."
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
     "artillery-core": "^2.0.0-0",
     "aws-sdk": "^2.5.0",
     "commander": "^2.9.0",
+    "ncp": "^2.0.0",
     "ntp-client": "^0.5.3"
   },
   "devDependencies": {
