--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "ntp-client": "^0.5.3"
   },
   "devDependencies": {
+    "bluebird": "^3.4.6",
     "chai": "^3.5.0",
     "jscs": "^3.0.7",
     "jshint": "^2.9.2",
     "mocha": "^3.0.2",
+    "mock-require": "^1.3.0",
     "pre-commit": "^1.1.3"
   },
   "pre-commit": [
