eslint <= [jscs, jshint] & cleanup
Change over our linting and style checking from jscs and jshint to eslint
Selected airbnb, ignored a few rules.  Will probably want to discuss and review eslintrc.yml

--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,11 @@
 # project files
 .editorconfig
+.eslintignore
+.eslintrc.yml
 .gitignore
-.jscsrc
-.jshintrc
-tests
+.travis.yml
 docs
+tests
 
 # OS files
 .DS_Store
