Lint `bin/serverless-artillery` too
1. Because it doesn't have the .js extension, `bin/serverless-artillery` was not being linted.  Add it to the lint targets.
2. Fix linting errors

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "mocha -r aws-sdk -r artillery-core --recursive -R min tests",
-    "lint": "eslint .",
+    "lint": "eslint . bin/serverless-artillery",
     "postinstall": "node ./postinstall.js"
   },
   "repository": {
