--- a/lib/lambda/serverless.yml
+++ b/lib/lambda/serverless.yml
@@ -13,6 +13,14 @@ service: serverless-artillery
 provider:                       # Using Node JS v4.3 on AWS
   name: aws
   runtime: nodejs4.3
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action:
+       - "lambda:InvokeFunction"
+      Resource:
+        "Fn::GetAtt":
+          - "LoadGeneratorLambdaFunction"
+          - "Arn"
 
 # you can overwrite defaults here
 #  region: us-east-1
