Fix #35 - remove circular CFT ref (#37)
Resolves an issue caused by circular reference.  The policy references the lambda that uses the policy.  Thereby, an error is created during deployment.

This was papered over because testing was done over an existing deployment that had already created the Lambda.  :P  Silly dev!  Drink more coffee.

--- a/lib/lambda/serverless.yml
+++ b/lib/lambda/serverless.yml
@@ -18,9 +18,14 @@ provider:                       # Using Node JS v4.3 on AWS
       Action:
        - "lambda:InvokeFunction"
       Resource:
-        "Fn::GetAtt":
-          - "LoadGeneratorLambdaFunction"
-          - "Arn"
+        "Fn::Join":
+          - ':'
+          -
+            - "arn:aws:lambda"
+            - Ref: "AWS::Region"
+            - Ref: "AWS::AccountId"
+            - "function"
+            - "${self:service}-${opt:stage, self:provider.stage}-loadGenerator*" # must match function name
 
 # you can overwrite defaults here
 #  region: us-east-1
