--- a/lib/lambda/package.json
+++ b/lib/lambda/package.json
@@ -1,7 +1,9 @@
 {
+  "description": "A load generator function implementation",
+  "repository": "n/a",
+  "license": "All rights reserved for deployer.",
   "dependencies": {
     "artillery-core": "^2.0.3-0",
-    "csv-parse": "^1.1.7",
-    "ntp-client": "^0.5.3"
+    "csv-parse": "^1.1.7"
   }
 }
