--- a/lib/lambda/script.yml
+++ b/lib/lambda/script.yml
@@ -1,13 +1,19 @@
 ---
+  # Thank you for trying serverless-artillery!
+  # This default script is intended to get you started quickly.
+  # There is a lot more that Artillery can do.
+  # You can find great documentation of the possibilities at:
+  # https://artillery.io/docs/
   config:
+    target: "http://aws.amazon.com" # this hostname will be used for each part of the flow
     phases:
       -
-        duration: 10    # Duration of test in seconds
-        arrivalRate: 1  # Starting rate (requests per second)
-        rampTo: 2       # Ending rate (RPS at end of test duration)
+        duration: 5
+        arrivalRate: 1
+        rampTo: 5
   scenarios:
     -
       flow:
         -
           get:
-            url: "http://aws.amazon.com"    # URL of service to test
+            url: "/"
