--- a/lib/lambda/serverless.yml
+++ b/lib/lambda/serverless.yml
@@ -8,9 +8,11 @@
 #
 # Thanks!
 
+# If the following value is changed, your service may be duplicated (this value is used to build the CloudFormation
+# Template script's name)
 service: serverless-artillery
 
-provider:                       # Using Node JS v4.3 on AWS
+provider: # Using Node JS v4.3 on AWS
   name: aws
   runtime: nodejs4.3
   iamRoleStatements:
@@ -27,10 +29,7 @@ provider:                       # Using Node JS v4.3 on AWS
             - "function"
             - "${self:service}-${opt:stage, self:provider.stage}-loadGenerator*" # must match function name
 
-# you can overwrite defaults here
-#  region: us-east-1
-
 functions:
-  loadGenerator: # Do not edit this name
+  loadGenerator: # !!Do not edit this name!!
     handler: handler.handler    # the serverlessArtilleryLoadTester handler() method can be found in the handler.js source file
     timeout: 300                # set timeout to be 5 minutes (max for Lambda)
