--- a/package.json
+++ b/package.json
@@ -34,13 +34,12 @@
   "dependencies": {
     "artillery-core": "^2.0.0-0",
     "aws-sdk": "^2.5.0",
-    "commander": "^2.9.0",
-    "ntp-client": "^0.5.3",
-    "yargs": "^6.2.0",
-    "yaml": "^0.3.0"
+    "bluebird": "^3.4.6",
+    "shortid": "^2.2.6",
+    "yaml": "^0.3.0",
+    "yargs": "^6.2.0"
   },
   "devDependencies": {
-    "bluebird": "^3.4.6",
     "chai": "^3.5.0",
     "eslint": "^3.8.1",
     "eslint-config-airbnb": "^12.0.0",
