Check Serverless Version
Fix #19
Include semver.
Use it to make sure the loaded version of SLS is compatible with `^1.0.3`
Update SLS mock in tests

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "artillery-core": "^2.0.0-0",
     "aws-sdk": "^2.5.0",
     "bluebird": "^3.4.6",
+    "semver": "^5.3.0",
     "shortid": "^2.2.6",
     "yaml": "^0.3.0",
     "yargs": "^6.2.0"
