fix editorconfig error
editorconfig didn't like the comment and ignored the setting, stripping semantically significant spaces as a result.  knock it off.
re-add the spaces that were stripped.

--- a/.editorconfig
+++ b/.editorconfig
@@ -13,4 +13,4 @@ trim_trailing_whitespace = true
 
 ; Custom for Markdown
 [*.md]
-trim_trailing_whitespace = false  ; these are semantically significant
+trim_trailing_whitespace = false
