cleaned up invokeSelf, minimized branching

--- a/lib/lambda/script.yml
+++ b/lib/lambda/script.yml
@@ -13,12 +13,14 @@
         rampTo: 5
   scenarios:
     -
+      name: 'john'
       flow:
         -
           get:
             url: "/"
             log: "first flow"
     -
+      name: 'dave'
       flow:
         -
           log: 'flow2'
