--- a/lib/lambda/script.yml
+++ b/lib/lambda/script.yml
@@ -4,6 +4,7 @@
   # There is a lot more that Artillery can do.
   # You can find great documentation of the possibilities at:
   # https://artillery.io/docs/
+  mode: 'acc'
   config:
     target: "https://aws.amazon.com" # this hostname will be used for each part of the flow
     phases:
