--- a/package.json
+++ b/package.json
@@ -49,8 +49,32 @@
     "eslint-plugin-react": "^6.4.1",
     "mocha": "^3.0.2",
     "mock-require": "^1.3.0",
-    "pre-commit": "^1.1.3"
+    "pre-commit": "^1.1.3",
+    "nyc": "^11.0.3"
   },
+  "nyc": {
+    "check-coverage": true,
+    "lines": 60,
+    "statements": 60,
+    "functions": 60,
+    "branches": 60,
+    "include": [
+      "**/*.js"
+    ],
+    "exclude": [
+      "bootstrap",
+      "build",
+      "impersonate.js",
+      "snapshot",
+      "dbReader",
+      "test"
+    ],
+    "extension": [
+      ".jsx"
+    ],
+    "cache": true,
+    "all": true
+  }
   "pre-commit": [
     "test",
     "lint"
