adding 'you dont need a phase in acceptance mode' to readme and adding nyc

--- a/package.json
+++ b/package.json
@@ -62,19 +62,15 @@
       "**/*.js"
     ],
     "exclude": [
-      "bootstrap",
-      "build",
-      "impersonate.js",
-      "snapshot",
-      "dbReader",
-      "test"
+      "npm.js",
+      "serverless-fx.js"
     ],
     "extension": [
       ".jsx"
     ],
     "cache": true,
     "all": true
-  }
+  },
   "pre-commit": [
     "test",
     "lint"
