--- a/lib/lambda/script.yml
+++ b/lib/lambda/script.yml
@@ -17,8 +17,8 @@
         -
           get:
             url: "/"
-    -
-      flow:
-        -
-          get:
-            url: "/"
+#    -
+#      flow:
+#        -
+#          get:
+#            url: "/"
