--- a/lib/lambda/package.json
+++ b/lib/lambda/package.json
@@ -4,8 +4,6 @@
   "license": "All rights reserved for deployer.",
   "dependencies": {
     "artillery-core": "^2.0.3-0",
-    "csv-parse": "^1.1.7",
-    "artillery-plugin-influxdb": "^0.9.0",
-    "artillery-plugin-uuid": "0.0.1"
+    "csv-parse": "^1.1.7"
   }
 }
