--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "slsart": "./bin/serverless-artillery"
   },
   "scripts": {
-    "test": "nyc ./node_modules/.bin/mocha -r aws-sdk -r artillery-core --recursive -R min tests",
-    "lint": "eslint . bin/serverless-artillery",
+    "test": "./node_modules/.bin/nyc ./node_modules/.bin/mocha -r aws-sdk -r artillery-core --recursive -R min tests",
+    "lint": "./node_modules/.bin/eslint . bin/serverless-artillery",
     "postinstall": "node ./postinstall.js",
     "publish": "./node_modules/.bin/np"
   },
@@ -36,6 +36,7 @@
     "artillery-core": "^2.0.0-0",
     "aws-sdk": "^2.5.0",
     "bluebird": "^3.4.6",
+    "get-stdin": "^5.0.1",
     "js-yaml": "^3.6.1",
     "semver": "^5.3.0",
     "shortid": "^2.2.6",
@@ -43,23 +44,23 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "eslint": "^3.8.1",
+    "chai-as-promised": "^7.1.1",
+    "eslint": "^4.7.2",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.4.1",
     "mocha": "^3.0.2",
-    "mock-require": "^1.3.0",
+    "mock-stdin": "^0.3.1",
     "np": "^2.16.0",
-    "pre-commit": "^1.1.3",
     "nyc": "^11.0.3"
   },
   "nyc": {
     "check-coverage": true,
     "lines": 45,
-    "statements": 45,
-    "functions": 60,
-    "branches": 25,
+    "statements": 25,
+    "functions": 30,
+    "branches": 15,
     "include": [
       "**/*.js"
     ],
@@ -67,16 +68,17 @@
       "**/lib/npm.js",
       "**/lib/serverless-fx.js",
       "postinstall.js",
-      "tests"
+      "tests",
+      "test.js"
+    ],
+    "reporter": [
+      "lcov",
+      "text-summary"
     ],
     "extension": [
       ".jsx"
     ],
     "cache": true,
     "all": true
-  },
-  "pre-commit": [
-    "test",
-    "lint"
-  ]
+  }
 }
