--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,19 +1,17 @@
+root: true
 extends: airbnb
 rules:
-  max-len:
-    - error
-    - 120
-    - ignoreTrailingComments: true
-    - ignoreUrls: true
+  max-len: off
   no-console: off
+  no-else-return: off
   no-plusplus:
     - error
     - allowForLoopAfterthoughts: true
-  no-else-return: off
-  strict: off # doesn't work in node v4
+  no-unexpected-multiline: error
+  semi:
+    - error
+    - never
 plugins:
-  - react
-  - jsx-a11y
   - import
 env:
   es6: true
