EVEN MOAR CLI TESTS
continue building out the index.js tests
correct failures of understanding that were causing false positives
add chai-as-promised to support better readability of tests
add npm.js tests and stop excluding that file
remove unnecessary mock-stdin, mocking the dependency directly using stdin
fix comment and missing space in message in index.js

--- a/package.json
+++ b/package.json
@@ -44,15 +44,16 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^4.7.2",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.4.0",
     "mocha": "^3.0.2",
-    "mock-stdin": "^0.3.1",
     "np": "^2.16.0",
-    "nyc": "^11.0.3"
+    "nyc": "^11.0.3",
+    "quibble": "^0.5.3"
   },
   "nyc": {
     "check-coverage": true,
@@ -64,7 +65,7 @@
       "**/*.js"
     ],
     "exclude": [
-      "**/lib/npm.js",
+      "coverage",
       "**/lib/serverless-fx.js",
       "postinstall.js",
       "tests",
