--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "slsart": "./bin/serverless-artillery"
   },
   "scripts": {
-    "test": "./node_modules/.bin/nyc ./node_modules/.bin/mocha -r aws-sdk -r artillery-core --recursive -R min tests",
+    "test": "./node_modules/.bin/nyc ./node_modules/.bin/_mocha -r aws-sdk -r ./lib/lambda/node_modules/artillery-core --recursive -R min tests",
     "lint": "./node_modules/.bin/eslint . bin/serverless-artillery",
     "postinstall": "node ./postinstall.js",
     "publish": "./node_modules/.bin/np"
@@ -53,7 +53,9 @@
     "mocha": "^3.0.2",
     "np": "^2.16.0",
     "nyc": "^11.0.3",
-    "quibble": "^0.5.3"
+    "quibble": "^0.5.3",
+    "sinon": "^4.1.3",
+    "sinon-chai": "^2.14.0"
   },
   "nyc": {
     "check-coverage": true,
