--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "slsart": "./bin/serverless-artillery"
   },
   "scripts": {
-    "test": "./node_modules/.bin/nyc ./node_modules/.bin/_mocha -r aws-sdk -r ./lib/lambda/node_modules/artillery-core --recursive -R min tests",
+    "test": "./node_modules/.bin/nyc ./node_modules/.bin/mocha -r aws-sdk -r ./lib/lambda/node_modules/artillery-core --recursive -R min tests",
     "lint": "./node_modules/.bin/eslint . bin/serverless-artillery",
     "postinstall": "node ./postinstall.js",
     "publish": "./node_modules/.bin/np"
@@ -22,6 +22,7 @@
     "artillery",
     "performance",
     "load",
+    "acceptance",
     "testing",
     "scale",
     "lambda"
@@ -33,7 +34,6 @@
   },
   "homepage": "https://github.com/Nordstrom/serverless-artillery#readme",
   "dependencies": {
-    "artillery-core": "^2.0.0-0",
     "aws-sdk": "^2.5.0",
     "bluebird": "^3.4.6",
     "get-stdin": "^5.0.1",
@@ -54,6 +54,7 @@
     "np": "^2.16.0",
     "nyc": "^11.0.3",
     "quibble": "^0.5.3",
+    "serverless": "^1.0.3",
     "sinon": "^4.1.3",
     "sinon-chai": "^2.14.0"
   },
