Initial Monitoring CLI Implementation
Implementation and tests of the described capabilities offered via the preliminary aspirational documentation.

index.js:
  . add constants used for monitoring mode.  (file comment content, regular expressions for restoring YAML comments, and a limit to the number of backup file attempts)
  . utility methods:
    . validateService: validates that the service that will be modified, lightly but for absolute requirements of the addition logic
    . addAssets: where all assets are added to the original service
    . splitIgnore/Except - string splitting utilities for compareRestore
    . compareRestore - diff the before and after.  before has the existing comments while after does not while after has the new assets but not the existing comments
    . replaceCommentKeys - collected comment into text insertion
    . writeBackup - iteratively write a backup file until it can be written without conflict
  . modifications:
    . invoke: handle m/monitoring flags, treating them similarly to a/acceptance
  . add monitor command that generates and adds assets to the default or existing serverless.yml
index.spec.js:
  . add tests for modifications and additions in index.js

npm.js:
  . allow installing specific module
npm.spec.js:
  . explicitly install aws-sdk to ensure that a require of the handler can be done (avoid problems like #108)

README.ms: explicitly note the need to deploy the altered serverless.yml

serverless.yml: change double quotes to single quotes (" => ') and update comment with same runtime version as the configuration
taskDef.js: add "mon" and "monitoring" definitions
package.json: add "diff" for use by monitor command
package-lock.json: update

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "aws-sdk": "^2.5.0",
     "bluebird": "^3.4.6",
+    "diff": "^3.5.0",
     "get-stdin": "^5.0.1",
     "js-yaml": "^3.6.1",
     "semver": "^5.3.0",
