--- a/lib/lambda/serverless.yml
+++ b/lib/lambda/serverless.yml
@@ -12,22 +12,22 @@
 # Template script's name)
 service: serverless-artillery
 
-provider: # Using Node JS v4.3 on AWS
+provider: # Using Node JS v6.10 on AWS
   name: aws
   runtime: nodejs6.10
   iamRoleStatements:
-    - Effect: "Allow"
+    - Effect: 'Allow'
       Action:
-       - "lambda:InvokeFunction"
+        - 'lambda:InvokeFunction'
       Resource:
-        "Fn::Join":
+        'Fn::Join':
           - ':'
           -
-            - "arn:aws:lambda"
-            - Ref: "AWS::Region"
-            - Ref: "AWS::AccountId"
-            - "function"
-            - "${self:service}-${opt:stage, self:provider.stage}-loadGenerator*" # must match function name
+            - 'arn:aws:lambda'
+            - Ref: 'AWS::Region'
+            - Ref: 'AWS::AccountId'
+            - 'function'
+            - '${self:service}-${opt:stage, self:provider.stage}-loadGenerator*' # must match function name
 
 functions:
   loadGenerator: # !!Do not edit this name!!
