--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^7.1.1",
     "coveralls": "^3.0.0",
+    "cross-spawn": "^6.0.5",
     "eslint": "^4.7.2",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
