--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,6 +1,7 @@
 root: true
 extends: airbnb
 rules:
+  function-paren-newline: off
   max-len: off
   no-console: off
   no-else-return: off
@@ -8,6 +9,7 @@ rules:
     - error
     - allowForLoopAfterthoughts: true
   no-unexpected-multiline: error
+  prefer-destructuring: off
   semi:
     - error
     - never
