--- a/lib/lambda/package.json
+++ b/lib/lambda/package.json
@@ -3,7 +3,7 @@
   "repository": "n/a",
   "license": "Apache-2.0",
   "dependencies": {
-    "artillery-core": "^2.0.3-0",
+    "artillery": "^1.6.0-15",
     "csv-parse": "^1.3.3",
     "lodash.merge": "^4.6.1",
     "lodash.omit": "^4.5.0"
