--- a/lib/lambda/package.json
+++ b/lib/lambda/package.json
@@ -4,6 +4,9 @@
   "license": "Apache-2.0",
   "dependencies": {
     "artillery": "^1.6.0-15",
+    "artillery-core": "^2.0.3-0",
+    "csv-parse": "^1.3.3",
+    "js-yaml": "^3.11.0",
     "lodash.merge": "^4.6.1",
     "lodash.omit": "^4.5.0",
     "util-promisify": "^2.1.0"
