--- a/lib/lambda/package.json
+++ b/lib/lambda/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "artillery-core": "^2.0.3-0",
     "csv-parse": "^1.3.3",
+    "js-yaml": "^3.11.0",
     "lodash.merge": "^4.6.1",
     "lodash.omit": "^4.5.0"
   }
