--- a/lib/lambda/package.json
+++ b/lib/lambda/package.json
@@ -4,8 +4,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "artillery": "^1.6.0-15",
-    "csv-parse": "^1.3.3",
     "lodash.merge": "^4.6.1",
-    "lodash.omit": "^4.5.0"
+    "lodash.omit": "^4.5.0",
+    "util-promisify": "^2.1.0"
   }
 }
