--- a/tests/.eslintrc.yml
+++ b/tests/.eslintrc.yml
@@ -1,8 +1,9 @@
 rules:
-  "import/no-extraneous-dependencies":
+  'import/no-extraneous-dependencies':
     - error
     - devDependencies:
-      - "**/*.spec.js"
+      - '**/*.spec.js'
+      - '**/integration/**/*.js'
   no-unused-expressions: off
 env:
   mocha: true
