change from script content to local script path to support 8k+ scripts

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,6 +1,15 @@
 root: true
 extends: airbnb
 rules:
+  # Note: this is to prevent compile errors for Node < 8.x. When Node 6 is
+  #   deprecated, this comma-dangle rule exception can be removed.
+  comma-dangle:
+    - error
+    - arrays: always-multiline
+      objects: always-multiline
+      imports: ignore
+      exports: ignore
+      functions: never
   function-paren-newline: off
   max-len: off
   no-console: off
