Remove `--ignore-scripts` update yarn.lock
Chasing down the build break under nodejs 10.x

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ node_js:
   - "10"
 before_script:
   - 'npm --version'
-  - 'npm i -g --ignore-scripts serverless'
+  - 'npm i -g serverless'
 after_success: npm run coverage
