--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "homepage": "https://github.com/Nordstrom/serverless-artillery#readme",
   "dependencies": {
+    "ajv": "^6.5.4",
     "aws-sdk": "^2.230.1",
     "bluebird": "^3.5.1",
     "diff": "^3.5.0",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "chai-spies": "^1.0.0",
     "coveralls": "^3.0.1",
     "cross-spawn": "^6.0.5",
     "eslint": "^4.19.1",
