--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "diff": "^3.5.0",
     "get-stdin": "^6.0.0",
     "js-yaml": "^3.11.0",
+    "rimraf": "^2.6.2",
     "semver": "^5.5.0",
     "shortid": "^2.2.8",
     "yargs": "^11.1.0"
