--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ node_js:
   - "8"
   - "8.10"
   - "10"
+before_install:
+  - 'find lib -type f -name "package-lock.json" -delete'
 before_script:
-  - 'npm --version'
   - 'npm i -g serverless'
 after_success: npm run coverage
