add finishing touches, remove unnecessary tests, fix linting errors

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "integration": "./node_modules/.bin/_mocha --timeout=1200000 ./tests/integration/index",
     "coverage": "./node_modules/.bin/nyc report --reporter=text-lcov | coveralls",
     "lint": "./node_modules/.bin/eslint . bin/serverless-artillery",
+    "fix": "./node_modules/.bin/eslint --fix . bin/serverless-artillery",
     "postinstall": "node ./postinstall.js",
     "publish": "./node_modules/.bin/np"
   },
