--- a/tests/integration/scripts/sample.integration.yml
+++ b/tests/integration/scripts/sample.integration.yml
@@ -1,12 +1,21 @@
 script:
   config:
-    target: 'https://artillery.io'
+    target: 'https://example.com'
     phases:
-      - duration: 5
+      - duration: 10
         arrivalRate: 1
+      - duration: 20
+        arrivalRate: 2
   scenarios:
     - flow:
       - get:
-          url: "/"
+        url: '/'
 expectations:
-  todo: ''
+  - from: 0
+    to: 10
+    min: 8
+    max: 12
+  - from: 10
+    to: 30
+    min: 35
+    max: 45
