--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "./node_modules/.bin/nyc ./node_modules/.bin/_mocha -r aws-sdk \"./tests/**/*.spec.js\"",
     "light": "./node_modules/.bin/nyc ./node_modules/.bin/_mocha -r aws-sdk \"./tests/**/!(serverless-artillery|npm).spec.js\"",
     "integration": "node ./tests/integration/run.integration.js",
+    "integration:upgrade": "./node_modules/.bin/_mocha --timeout 90000 ./tests/integration/versioning/upgrade.js",
     "coverage": "./node_modules/.bin/nyc report --reporter=text-lcov | coveralls",
     "lint": "./node_modules/.bin/eslint . bin/serverless-artillery",
     "postinstall": "node ./postinstall.js",
@@ -54,7 +55,7 @@
     "chai-spies": "^1.0.0",
     "coveralls": "^3.0.1",
     "cross-spawn": "^6.0.5",
-    "deep-diff": "^1.0.2",
+    "es6-promisify": "^6.0.1",
     "eslint": "^5.12.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.11.0",
@@ -62,9 +63,11 @@
     "eslint-plugin-react": "^7.12.3",
     "lodash.merge": "^4.6.1",
     "mocha": "^5.1.1",
+    "ncp": "^2.0.0",
     "np": "^2.20.1",
     "nyc": "^11.7.1",
     "quibble": "^0.5.5",
+    "recursive-readdir": "^2.2.2",
     "serverless": "^1.36.1",
     "sinon": "^5.0.2",
     "sinon-chai": "^3.3.0",
