Replace xmlhttprequest with node-fetch, remove unncessary comments

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "diff": "^3.5.0",
     "get-stdin": "^6.0.0",
     "js-yaml": "^3.11.0",
+    "node-fetch": "^2.3.0",
     "semver": "^5.5.0",
     "shortid": "^2.2.8",
     "xmlhttprequest": "^1.8.0",
