--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "./node_modules/.bin/nyc ./node_modules/.bin/_mocha -r aws-sdk \"./tests/**/*.spec.js\"",
     "light": "./node_modules/.bin/nyc ./node_modules/.bin/_mocha -r aws-sdk \"./tests/**/!(serverless-artillery|npm).spec.js\"",
     "integration": "node ./tests/integration/run.integration.js",
+    "integration:upgrade": "./node_modules/.bin/_mocha --timeout 90000 ./tests/integration/versioning/upgrade.js",
     "coverage": "./node_modules/.bin/nyc report --reporter=text-lcov | coveralls",
     "lint": "./node_modules/.bin/eslint . bin/serverless-artillery",
     "postinstall": "node ./postinstall.js",
@@ -37,33 +38,40 @@
   },
   "homepage": "https://github.com/Nordstrom/serverless-artillery#readme",
   "dependencies": {
-    "aws-sdk": "^2.230.1",
-    "bluebird": "^3.5.1",
+    "ajv": "^6.7.0",
+    "aws-sdk": "^2.388.0",
+    "bluebird": "^3.5.3",
     "diff": "^3.5.0",
     "get-stdin": "^6.0.0",
-    "js-yaml": "^3.11.0",
+    "js-yaml": "^3.12.1",
+    "rimraf": "^2.6.3",
     "semver": "^5.5.0",
-    "shortid": "^2.2.8",
+    "shortid": "^2.2.14",
     "yargs": "^11.1.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "chai-spies": "^1.0.0",
     "coveralls": "^3.0.1",
     "cross-spawn": "^6.0.5",
-    "eslint": "^4.19.1",
+    "es6-promisify": "^6.0.1",
+    "eslint": "^5.12.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react": "^7.12.3",
     "lodash.merge": "^4.6.1",
     "mocha": "^5.1.1",
+    "ncp": "^2.0.0",
     "np": "^2.20.1",
     "nyc": "^11.7.1",
     "quibble": "^0.5.5",
-    "serverless": "^1.26.1",
+    "recursive-readdir": "^2.2.2",
+    "serverless": "^1.36.1",
     "sinon": "^5.0.2",
-    "sinon-chai": "^3.0.0"
+    "sinon-chai": "^3.3.0",
+    "tmp": "0.0.33"
   },
   "nyc": {
     "include": [
