Audit of NPM dependencies. (#207)
Correct license to remove warning during install.
Adds `audit` npm run scripts to help facilitate future audits.

--- a/lib/lambda/package.json
+++ b/lib/lambda/package.json
@@ -1,9 +1,9 @@
 {
   "description": "A load generator function implementation",
   "repository": "n/a",
-  "license": "All rights reserved for deployer.",
+  "license": "Apache-2.0",
   "dependencies": {
     "artillery-core": "^2.0.3-0",
-    "csv-parse": "^1.1.7"
+    "csv-parse": "^1.3.3"
   }
 }
