--- a/tests/integration/scripts/multiple.controller.sustain.yml
+++ b/tests/integration/scripts/multiple.controller.sustain.yml
@@ -1,8 +1,10 @@
 script:
+  _split:
+    maxChunkDurationInSeconds: 20
   config:
     target: 'https://example.com'
     phases:
-      - duration: 10
+      - duration: 30
         arrivalRate: 10
   scenarios:
     - flow:
@@ -10,6 +12,6 @@ script:
           url: '/'
 expectations:
   - from: 0
-    to: 10
-    min: 90
-    max: 110
+    to: 30
+    min: 295
+    max: 305
