--- a/tests/integration/scripts/multiple.worker.all.yml
+++ b/tests/integration/scripts/multiple.worker.all.yml
@@ -1,18 +1,24 @@
 script:
   _split:
-    maxChunkRequestsPerSecond: 10
+    maxChunkRequestsPerSecond: 20
   config:
     target: 'https://example.com'
     phases:
-      - duration: 10
+      - duration: 30
         arrivalRate: 1
         rampTo: 15
+      - duration: 30
+        arrivalRate: 15
   scenarios:
     - flow:
       - get:
           url: '/'
 expectations:
   - from: 0
-    to: 10
-    min: 70
-    max: 90
+    to: 30
+    min: 250
+    max: 310
+  - from: 30
+    to: 60
+    min: 420
+    max: 460
