--- a/tests/integration/scripts/single.worker.all.yml
+++ b/tests/integration/scripts/single.worker.all.yml
@@ -1,12 +1,12 @@
 script:
-  _split:
-    maxChunkRequestsPerSecond: 10
   config:
     target: 'https://example.com'
     phases:
       - duration: 10
-        arrivalRate: 15
-        rampTo: 1
+        arrivalRate: 1
+        rampTo: 10
+      - duration: 10
+        arrivalRate: 10
   scenarios:
     - flow:
       - get:
@@ -14,5 +14,9 @@ script:
 expectations:
   - from: 0
     to: 10
-    min: 70
-    max: 90
+    min: 45
+    max: 65
+  - from: 10
+    to: 20
+    min: 90
+    max: 110
