--- a/lib/lambda/package.json
+++ b/lib/lambda/package.json
@@ -4,7 +4,7 @@
   "repository": "n/a",
   "license": "Apache-2.0",
   "dependencies": {
-    "artillery": "git+https://github.com/Nordstrom/artillery.git#script-as-object-2",
+    "artillery": "git+https://github.com/Nordstrom/artillery.git#916052532f9aaa9d3d31dfb486c7397fd24d1ab2",
     "js-yaml": "^3.11.0",
     "lodash.merge": "^4.6.1",
     "lodash.omit": "^4.5.0",
