--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,5 +11,6 @@ run-test:
 
 aws-integration-test:
   script:
+    - npm install -g serverless
     - creds-helper -aws
     - npm run test-integration
