Gitlab build script sets AWS_REGION.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ aws-integration-test:
   image: gitlab-registry.nordstrom.com/cicd/images/incubator/artillery:unstable
   variables:
     STAGE: test
+    AWS_REGION: us-west-2
   script:
     - creds-helper -aws
     - aws opsworks describe-my-user-profile
