--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
     "rimraf": "^2.6.3",
     "semver": "^5.5.0",
     "shortid": "^2.2.14",
-    "yargs": "^11.1.0",
-    "snyk": "^1.189.0"
+    "yargs": "^11.1.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
@@ -75,6 +74,7 @@
     "quibble": "^0.5.5",
     "recursive-readdir": "^2.2.2",
     "serverless": "^1.40.0",
+    "snyk": "^1.189.0",
     "sinon": "^5.0.2",
     "sinon-chai": "^3.3.0",
     "tmp": "0.0.33"
