--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "rimraf": "^2.6.3",
     "semver": "^5.5.0",
     "shortid": "^2.2.14",
+    "temp": "^0.9.1",
     "yargs": "^12.0.2"
   },
   "devDependencies": {
