--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "slsart": "./bin/serverless-artillery"
   },
   "scripts": {
-    "test": "./node_modules/.bin/nyc ./node_modules/.bin/_mocha -r aws-sdk \"./tests/**/*.spec.js\"",
-    "test-light": "./node_modules/.bin/nyc ./node_modules/.bin/_mocha -r aws-sdk \"./tests/**/!(serverless-artillery|npm).spec.js\"",
-    "test-integration": "./node_modules/.bin/_mocha --timeout=1200000 ./tests/integration/index",
-    "test-upgrade": "./node_modules/.bin/_mocha --timeout 90000 ./tests/integration/versioning/upgrade.js",
+    "test": "./tests/test-npm-install; ./node_modules/.bin/nyc ./node_modules/.bin/_mocha -r aws-sdk \"./tests/**/*.spec.js\"",
+    "test-light": "./tests/test-npm-install; ./node_modules/.bin/nyc ./node_modules/.bin/_mocha -r aws-sdk \"./tests/**/!(serverless-artillery|npm).spec.js\"",
+    "test-integration": "./tests/test-npm-install; ./node_modules/.bin/_mocha --timeout=1200000 ./tests/integration/index",
+    "test-upgrade": "./tests/test-npm-install; ./node_modules/.bin/_mocha --timeout 90000 ./tests/integration/versioning/upgrade.js",
     "coverage-report": "./node_modules/.bin/nyc report --reporter=lcov",
     "lint": "./node_modules/.bin/eslint . bin/serverless-artillery",
     "fix": "./node_modules/.bin/eslint --fix . bin/serverless-artillery",
-    "postinstall": "node ./postinstall.js",
     "publish": "./node_modules/.bin/np"
   },
   "repository": {
@@ -49,6 +48,7 @@
     "rimraf": "^2.6.3",
     "semver": "^5.5.0",
     "shortid": "^2.2.14",
+    "temp": "^0.9.1",
     "yargs": "^12.0.2"
   },
   "devDependencies": {
@@ -63,7 +63,7 @@
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.12.3",
-    "lodash.merge": "^4.6.1",
+    "lodash.merge": "^4.6.2",
     "mocha": "^5.1.1",
     "ncp": "^2.0.0",
     "np": "5.0.1",
