--- a/lib/lambda/serverless.yml
+++ b/lib/lambda/serverless.yml
@@ -10,7 +10,7 @@
 
 # If the following value is changed, your service may be duplicated (this value is used to build the CloudFormation
 # Template script's name)
-service: serverless-artillery-abcdefgh-abcdefgh-abcdefgh-abcdefgh-abcdefgh-abcdefgh-abcdefgh-abcdefgh-abcdefgh-abcdefgh-abcdefgh-abcdefgh
+service: serverless-artillery
 
 provider:
   name: aws
