--- a/lib/lambda/serverless.yml
+++ b/lib/lambda/serverless.yml
@@ -14,7 +14,7 @@ service: serverless-artillery
 
 provider:
   name: aws
-  runtime: nodejs8.10
+  runtime: nodejs10.x
   iamRoleStatements:
     # This policy allows the function to invoke itself which is important if the script is larger than a single
     # function can produce
